[tool.poetry]
name = "smo_1"
version = "0.1.0"
description = ""
authors = ["adios <eremeevvv72@yandex.ru>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scipy = "^1.8.0"
Flask = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
